# novasolve

./: .gitignore  CMakeLists.txt  README.md
docs/: Documentation.md
examples/: lu.cpp
include/novasolve/: LU.h  Matrix.h  MatrixGen.h  SparseMatrix.h  Vector.h
tests/: exp_matrix.cpp  naive_test.cpp  test_lu.cpp  test_matrix.cpp  test_plot.cpp  test_sparse.cpp  test_vector.cpp
